# hdl-dump

./: CMakeLists.txt  HDLpp.h  README.md  aligned.c  aligned.h  apa.c  apa.h  aspi_hlio.c  aspi_hlio.h  byteseq.c  byteseq.h  common.c  common.h  config.h  dict.c  dict.h  hdl.c  hdl.h  hdl_dump.c  hio.h  hio_dbg.c  hio_dbg.h  hio_probe.c  hio_trace.c  hio_trace.h  hio_udpnet.c  hio_udpnet.h  hio_udpnet2.c  hio_udpnet2.h  hio_win32.c  hio_win32.h  iin.h  iin_aspi.c  iin_aspi.h  iin_cdrwin.c  iin_cdrwin.h  iin_gi.c  iin_gi.h  iin_hio.c  iin_hio.h  (+30 more)
.github/workflows/: clang-format.yml  compilation.yml
execli/: execli.c
gui/: gui_main.c
svr/: ipconfig.c  ipconfig.h  main.c  main.h
svr/pktdrv/: arp.c  arp.h  eth.c  eth.h  icmp.c  icmp.h  ip.c  ip.h  ipconfig.c  ipconfig.h  main.c  nettypes.h  nic.c  nic.h  svr.c  svr.h  udp.c  udp.h
